Fix display of sidebar scrollbar + remove JS function to handled margin gap.

--- a/pydoctor/templates/apidocs.css
+++ b/pydoctor/templates/apidocs.css
@@ -540,16 +540,18 @@ div.tip, div.hint, div.important {
     position: sticky;
     top: 0;
     overflow-wrap: break-word;
-    overflow-x: visible;
-    overflow-y: auto;
+    overflow-x: none;
+    overflow-y: scroll;
     background-color: #f8f8f8;
     border-color: #e7e7e7;
+    scrollbar-width: thin;
+    scrollbar-color: rgb(194,194,194) rgb(249,249,249);
 }
 
 .sidebarcontainer::-webkit-scrollbar {
-    width: 5px;
-    position: absolute;
-    
+    width: 1rem; /* Scrollbar width on Chromium-based browsers */
+    border: solid 1px rgb(229,229,229);
+    background-color: rgb(249,249,249);
 }
 
 .sidebarcontainer::-webkit-scrollbar:horizontal {
@@ -562,10 +564,10 @@ div.tip, div.hint, div.important {
 }
 
 .sidebarcontainer::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 5px 5px rgb(200,200,200);
-    border: solid 1px transparent;
-    border-radius: 3px;
-}
+    box-shadow: inset 0 0 5px 5px rgb(194,194,194);
+    border: solid 2px transparent;
+    border-radius: 5px;
+} 
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 /* .sidebarcontainer::-webkit-scrollbar {
@@ -581,11 +583,12 @@ div.tip, div.hint, div.important {
 /* The sidebar menu */
 
 .sidebar {
-    /* padding-bottom: 10px; */
+    /*! padding-bottom: 10px; */
+    width: 100%;
 }
 
 .sidebar > div {
-    width: 280px;
+    width: 100%;
     padding-top: 7px;
 }
 
@@ -598,15 +601,14 @@ div.tip, div.hint, div.important {
     padding-bottom: 15px;
 }
 
-.sidebar > div ul {
+.sidebar ul {
     display: block;
     margin: 0 0 5px 0;
-    padding: 0;
+    padding: 0 0 0 10px;
 }
 
 .sidebar li {
     width: 100%;
-    margin-left: 14px;
     padding: 0;
     display: flex;
     overflow: hidden;
@@ -620,8 +622,8 @@ div.tip, div.hint, div.important {
 }
 
 .sidebar li ul {
-    margin: 0;
-    padding: 0;
+    margin: 0 0 2px 0;
+    padding: 0 0 0 7px;
     border: 0;
 }
 
@@ -692,9 +694,6 @@ div.tip, div.hint, div.important {
     .sidebarcontainer {
         width: 257px; /* Set the width of the sidebar: 250px + 2px for the border + 5px for the scrollbar */
     }
-    .sidebar > div {
-        width: 240px;
-    }
     .main {
         margin-left: 277px; /* Same as the width of the sidebar + 20px*/
     }
@@ -704,9 +703,6 @@ div.tip, div.hint, div.important {
 @media only screen and (max-width: 800px) {
     .sidebarcontainer {
         width: 207px; /* Set the width of the sidebar: 200px + 2px for the border + 5px for the scrollbar */
-    }
-    .sidebar > div {
-        width: 190px;
     }
     .main {
         margin-left: 227px; /* Same as the width of the sidebar + 20px */
@@ -736,7 +732,7 @@ nav.foot address {
     margin: 0;
     position: sticky;
     top: 0;
-    z-index:30;
+    right: 0;
 }
 
 #collapseSideBar > a:hover{
@@ -752,13 +748,12 @@ nav.foot address {
     padding: 1px;
     background-color: #e7e7e7;
     border-radius: 0 4px 0 4px;
-    margin: -11px 0 0 -3px;
+    margin: -11px 0 0 -10px;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
     border: solid 1px #e7e7e7;
-    z-index:30;
 }
 
 /* collapsed */
